[tool.poetry]
name = "urdf2dh"
version = "0.1.0"
description = "translate urdf to dh-parameter"
authors = ["takeshiD <goriponikeike55@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
