[metadata]
name = urdf2dh
version = attr: urdf2dh.__version__
url = https://github.com/takeshiD/tik
author = Diamond Takeshi
description = extract dh-parameter from urdf
long_description = file: README.md
license = MIT License
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
package_dir =
    =src
packages = find:
install_requires = 
    numpy~=1.19
    scipy~=1.5
    nptyping~=1.4

[options.packages.find]
where = src